#662 настройка Selenium Grid + PW + WD для ВМ